[package]
name         = "anchored-vfs"
authors      = ["Finley Huggins"]
description  = "Filesystem interfaces and implementations, built for anchored-leveldb"
# TODO: make a crate-specific README
readme       = "../../README.md"
keywords     = ["virtual", "filesystem", "vfs", "leveldb"]
categories   = ["filesystem", "virtualization", "data-structures"]
include      = ["Cargo.toml", "**/*.rs", "../../LICENSE-APACHE", "../../LICENSE-MIT"]
version      = "0.1.0"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true


[dependencies]
cfg-if              = { workspace = true, optional = true }
generic-container   .workspace = true
# I needed a hashbrown feature which, as of Rust 1.87, is only exposed in std's HashMap in nightly.
# (Internally, std uses hashbrown, so normally this dependency is unnecessary.)
hashbrown           .workspace = true
rustversion         .workspace = true
time                = { workspace = true, optional = true, default-features = false }
zip                 = { workspace = true, optional = true, default-features = false }

[target.'cfg(any(unix, windows))'.dependencies]
fs4     = { workspace = true, optional = true }

# [target.'cfg(not(any(unix, windows)))'.dependencies]
# No extra dependencies are currently needed in this case


# TODO: document features
[features]
default      = ["std-fs"]
std-fs       = ["dep:cfg-if", "dep:fs4"]
# Enables `ReadOnlyZipFS` and conversions between zip stuff and MemoryFS
zip          = ["dep:zip"]
zip-time-js  = ["zip", "zip/time", "time/wasm-bindgen"]
# TODO: js-fs feature

# Use code that would compile under the newer borrow checker, Polonius (available with -Zpolonius),
# but would not compile under NLL (the current borrow checker).
# Enabling this feature removes a small amount of unsafe code.
polonius = []
