[package]
name         = "anchored-vfs"
authors      = ["Finley Huggins"]
description  = "Filesystem interfaces and implementations, built for anchored-leveldb"
# TODO: make a crate-specific README
readme       = "../../README.md"
keywords     = ["virtual", "filesystem", "vfs", "leveldb"]
categories   = ["filesystem", "virtualization", "data-structures"]
include      = ["Cargo.toml", "**/*.rs", "../../LICENSE-APACHE", "../../LICENSE-MIT"]
version      = "0.1.0"
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
generic-container   .workspace = true
# A hashbrown feature is needed which, as of Rust 1.87, is only exposed in std's HashMap in nightly.
# (Internally, std uses hashbrown, so normally this dependency is unnecessary.)
hashbrown           .workspace = true
rustversion         .workspace = true
# zip                 = { workspace = true, optional = true, default-features = false }

[target.'cfg(any(unix, windows))'.dependencies]
cfg-if  .workspace = true
fs4     .workspace = true

# [target.'cfg(not(any(unix, windows)))'.dependencies]
# No extra dependencies are currently needed in this case


# TODO: document features
[features]
# Enables `ReadOnlyZipFS` and conversions between zip stuff and MemoryFS
# zip          = ["dep:zip"]

# TODO: js-fs feature

# Use code that would compile under the newer borrow checker,
# Polonius (available with -Zpolonius=next),
# but would not compile under NLL (the current borrow checker).
# Enabling this feature removes a small amount of unsafe code.
polonius = []
